--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ reqwest = { version = "0.12", features = ["json"] }
 authors = ["Caio Silva <caio.cdcs@gmail.com>"]
 edition = "2024"
 license = "MIT"
+version = "0.1.0"
