--- a/comboios/Cargo.toml
+++ b/comboios/Cargo.toml
@@ -9,8 +9,12 @@ path = "src/lib.rs"
 
 [dependencies]
 anyhow = "1.0.98"
-reqwest = "0.12.19"
-serde = "1.0.219"
+reqwest = { version = "0.12.19", features = ["json"] }
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
 tracing = "0.1.41"
+
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full"] }
+tracing-subscriber = "0.3"
